package model;

public enum PawnColor {
    RED,
    ORANGE,
    GREEN,
    BLUE
}
